--- a/src/components/SearchBox/searchbox.module.css
+++ b/src/components/SearchBox/searchbox.module.css
@@ -1,8 +1,5 @@
-.inpurSearch {
-  margin: 20px;
-  margin-left: 0;
-  margin-top: 4px;
-  width: 320px;
+.inputSearch {
+  width: 250px;
   height: 24px;
   border-radius: 4px;
   border: 1px solid black;
@@ -10,6 +7,19 @@
 .labelForm {
   display: flex;
   flex-direction: column;
-  margin-top: 40px;
-  width: 350px;
+  width: 270px;
+  align-items: end;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  align-items: baseline;
+}
+.containerForm {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  height: auto;
+  background-color: rgb(218, 218, 218);
+  margin-bottom: 20px;
+  border-radius: 4px;
+  padding: 10px;
 }
