--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,14 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #d2d2d2;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #606060;
 }
 
 body {
-  margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -47,7 +46,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #e3e3e3;
 }
 button:focus,
 button:focus-visible {
