--- a/src/pages/Contacts/Contacts.module.css
+++ b/src/pages/Contacts/Contacts.module.css
@@ -1,3 +1,18 @@
 .containerContacts {
-  margin-top: 100px;
+  display: flex;
+  top: 60px;
+  justify-content: center;
+  width: 100%;
+  position: fixed;
+  top: 70px;
+  left: 0;
+  width: 100%;
+}
+.containerUser {
+  display: flex;
+}
+.content {
+  top: 0px;
+  margin-top: 20px;
+  width: 900px;
 }
